Properties made for capacity and count. Add method created. Adds a value to the array. Doubles the size of the array if the value would not be able to be placed at the end of it.

--- a/CustomListUnitTest/CustomListUnitTest.csproj
+++ b/CustomListUnitTest/CustomListUnitTest.csproj
@@ -49,8 +49,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomListIntUnitTest.cs" />
-    <Compile Include="CustomListStringUnitTest.cs" />
+    <Compile Include="CustomListUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
